
Version 1.8.3 patchlevel 12                     ??? ??, 2010

Major Changes:
 * 'mud_url' @config. If this is enabled, accessing the mush with an HTTP
   browser will redirect the user to the selected mud_url. (This may need
   some work and testing by a public place with many clients.) [GM]

Minor Changes:
 * align() can now do full justification. Suggested by Trinsec@M*U*S*H [GM]
 * Guests will no longer see "Guests can't do that" if @mail is restricted
   to noguest. [GM]
 * Helpfile cleanup. [MG]
 * Expand the @lock key optimizer. Try '@lock me=!!=me'.
 * When objects are destroyed, references to them in locks
   are replaced by #FALSE, so that a newly created object reusing
   some dbref won't pass locks it shouldn't.
 * /'s can now be included in the subject of a @mail 
   message via doubling it up -- @mail foo=a//s//l/What's up? 
   Suggested by paige.
 * locate() now ignores spaces in its 3rd argument. [MG]
 * Change the default mud_name in mush.cnf from TinyMUSH
   to PennMUSH. Suggested by many people over the years.
 * @firstexit can now take multiple exits, and can affect exits in other
   rooms. Suggested by AnneLions. [MG]
 * Changed some default mush.cnf options. [MG]

Functions
 * llocks() without any arguments returns a list of the
   standard locks.
 * unsetq(), to erase queue registers. [GM]
 * and[l]flags(), or[l]flags(), andlpowers() and orlpowers() now all return
   #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]

Fixes:
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Many more messages generated by the server have been 
   marked as translatable. By Stoko.

Version 1.8.3 patchlevel 11                     Jan 01, 2010

Major changes:
  * The WHO, DOING and SESSION commands are now normal game commands,
    and can be @hook'd, typed in lower-case, etc. (The WHO at the login
    screen is separate.) If you have a softcoded 'who' command, you will